--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -23,9 +23,9 @@ jobs:
           method: jwt
           url: http://127.0.0.1:8200
           tlsSkipVerify: true
-          role: ${{ github.event.repository.name }}_${{ env.ENVIRONMENT }}
+          role: demo_app
           secrets: |
-            secret/data/${{ github.event.repository.name }}/${{ env.ENVIRONMENT }} app_secret
+            secret/data/${{ github.repository }}/${{ env.ENVIRONMENT }} app_secret
       - name: Build Docker Image
         run: docker build . --file Dockerfile --build-arg app_secret="${{ env.APP_SECRET }}" -t vault-action-exampleapp
       
@@ -47,9 +47,9 @@ jobs:
           method: jwt
           url: http://127.0.0.1:8200
           tlsSkipVerify: true
-          role: ${{ github.event.repository.name }}_${{ env.ENVIRONMENT }}
+          role: demo_app
           secrets: |
-            secret/data/${{ github.event.repository.name }}/${{ env.ENVIRONMENT }} app_secret
+            secret/data/${{ github.repository }}/${{ env.ENVIRONMENT }} app_secret
       - name: Build Docker Image
         run: docker build . --file Dockerfile --build-arg app_secret="${{ env.APP_SECRET }}" -t vault-action-exampleapp
         
@@ -71,8 +71,8 @@ jobs:
           method: jwt
           url: http://127.0.0.1:8200
           tlsSkipVerify: true
-          role: ${{ github.event.repository.name }}_${{ env.ENVIRONMENT }}
+          role: demo_app
           secrets: |
-            secret/data/${{ github.event.repository.name }}/${{ env.ENVIRONMENT }} app_secret
+            secret/data/${{ github.repository }}/${{ env.ENVIRONMENT }} app_secret
       - name: Build Docker Image
         run: docker build . --file Dockerfile --build-arg app_secret="${{ env.APP_SECRET }}" -t vault-action-exampleapp
