--- a/.github/workflows/image-builder.yml
+++ b/.github/workflows/image-builder.yml
@@ -25,7 +25,7 @@ jobs:
           tlsSkipVerify: true
           role: demo_app_${{ env.ENVIRONMENT }}
           secrets: |
-            secret/data/${{ github.repository }}/test app_secret
+            secret/data/${{ github.repository }}/${{ env.ENVIRONMENT }} app_secret
       - name: Build Docker Image
         run: docker build . --file Dockerfile --build-arg app_secret="${{ env.APP_SECRET }}" -t vault-action-exampleapp
       
